# fake_lidar

./: CMakeLists.txt  README  README.md  package.xml
include/: FakeLidar.h  fake_lidar.h
launch/: visualize_lidar.launch
rviz_cfg/: visualize_lidar.rviz
src/: FakeLidar.cpp  fake_lidar.cpp
